tests/compile_fail/dimension_mismatch.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/dimension_mismatch.rs:9:17
  |
9 |     let _ = d + t; // can't add meter and second: dimension mismatch
  |                 ^ expected `Unit<{float}, Z0, PInt<UInt<UTerm, B1>>>`, found `Unit<{float}, Z0, Z0, PInt<...>>`
  |
  = note: expected struct `Unit<{float}, Z0, PInt<UInt<UTerm, B1>>, Z0, Z0, Z0, Z0, Z0>`
             found struct `Unit<{float}, Z0, Z0, PInt<UInt<UTerm, B1>>, Z0, Z0, Z0, Z0>`
